# Riichi-Reach-Large-homework

./: README.md
Riichi_Reach/: CMakeLists.txt  CMakeLists.txt.user.1117210  CMakeLists.txt~RF2a4b2033.TMP  main.cpp  widget.cpp  widget.h  yakucalculator.cpp  番种表(2).docx
Riichi_Reach/core/: YaKuCalculator.h  hand_manager.h  tile.h
Riichi_Reach/manager/: gamemanager.cpp  gamemanager.h
